--- a/zach.bib
+++ b/zach.bib
@@ -757,7 +757,7 @@
   copyright = {All rights reserved},
   eprint = {SCHCEM-3},
   eprinttype = {philpapers},
-  file = {/home/zach/Documents/bib/Schiemer et al. - 2017 - Carnap’s early metatheory scope and limits.pdf;/home/zach/Zotero/storage/TB2K47WI/Schiemer et al. - 2017 - Carnap’s early metatheory scope and limits.pdf;/home/zach/Zotero/storage/29LZBQB2/10.html},
+  file = {/home/zach/Documents/bib/Schiemer et al. - 2017 - Carnap’s early metatheory scope and limits.pdf},
   journal = {Synthese},
   keywords = {article},
   language = {en},
