--- a/rz-vita.sty
+++ b/rz-vita.sty
@@ -1,9 +1,10 @@
 %% Curriculum Vitae style file
 %% 
-%% James Keirstead
-%% Last updated: 2 March 2015
+%% Richard Zach
+%% Last updated: 4 March 2021
 %%
 %% This file contains elements from:
+%%  - https://github.com/jkeirstead/jk-vita
 %%  - http://robjhyndman.com/research/cv.sty
 %%  - http://kjhealy.github.com/kjh-vita
 %%
@@ -55,7 +56,6 @@
 % and also remove the \input{vc} line above.
 
 % What use is a commit number?
-%\newcommand{\gitinfo}{\textcolor{Gray}{\texttt{\scriptsize \VCRevision\ on \VCDateTEX}}}
 \newcommand{\gitinfo}{\textcolor{Gray}{\texttt{\scriptsize Last updated \VCDateTEX}}}
 
 % Style for the front page
@@ -124,7 +124,6 @@
   % Pull header block up
   \vspace*{-6em}
 
-
   \begin{minipage}[t]{3.5in}
     \flushright {\footnotesize \@address} 
   \end{minipage}
@@ -148,7 +147,6 @@
   \noindent{\LARGE\scshape{\@title\ \@name}} {\scriptsize \textsc{\@postnoms}}\\
   \bigskip
   \bigskip
-
 }
 
 %%------------------------------------------------------------------------
