--- a/zach.bib
+++ b/zach.bib
@@ -127,9 +127,11 @@
   title = {Systematic Construction of Natural Deduction Systems for Many-Valued Logics. {{Extended}} Report},
   author = {Baaz, Matthias and Ferm{\"u}ller, Christian G. and Zach, Richard},
   year = {1993},
-  number = {TUWE\textendash 185.2\textendash BFZ.1\textendash 93},
+  number = {TUW\textendash 185.2\textendash BFZ.1\textendash 93},
+  address = {{Vienna}},
   institution = {{Technische Universit\"at Wien, Institut f\"ur Computersprachen E185.2}},
   copyright = {All rights reserved},
+  scholar = {8943239453694643393},
   keywords = {techreport},
   file = {/home/zach/Documents/bib/Baaz et al. - 1993 - Systematic construction of natural deduction syste3.pdf}
 }
@@ -146,7 +148,7 @@
   address = {{Los Alamitos}},
   doi = {10.1109/ISMVL.1993.289558},
   copyright = {All rights reserved},
-  scholar = {8129704214380989574,8943239453694643393},
+  scholar = {8129704214380989574},
   keywords = {chapter},
   file = {/home/zach/Documents/bib/Baaz et al. - 1993 - Systematic construction of natural deduction syste.pdf;/home/zach/Documents/bib/Baaz et al. - 1993 - Systematic construction of natural deduction syste2.pdf}
 }
@@ -456,7 +458,7 @@
   publisher = {{hpt}},
   address = {{Vienna}},
   copyright = {All rights reserved},
-  langid = {german},
+  langid = {ngerman},
   keywords = {chapter}
 }
 
@@ -532,6 +534,8 @@
   journal = {The Review of Symbolic Logic},
   volume = {14},
   number = {4},
+  eprint = {BURCCF-2},
+  eprinttype = {philpapers},
   pages = {910--929},
   doi = {10.1017/S1755020320000180},
   scholar = {10509336364159558815},
@@ -717,16 +721,19 @@
   copyright = {All rights reserved},
   langid = {english},
   scholar = {2784135096858806847,14902288454561720452},
-  keywords = {article,short},
+  keywords = {article},
   file = {/home/zach/Documents/bib/Mancosu and Zach - 2015 - Heinrich Behmann's 1921 lecture on the algebra of .pdf}
 }
 
 @incollection{MancosuZach2019,
-  title = {{Introduction to Heinrich Behmann's ``Probl\`eme de la d\'ecision et algebre de la logique'' (1921)}},
+  title = {{Note introductive \`a Heinrich Behmann, ``Probl\`eme de la d\'ecision et Agebre de la Logique'' (1921)}},
   booktitle = {{Anthologie de la calculabilit\'e: Naissance et d\'eveloppements de la th\'eorie de la calculabilit\'e des ann\'ees 1920 \`a 1970}},
   author = {Mancosu, Paolo and Zach, Richard},
   editor = {Mosconi, Jean and Bourdeau, Michel},
   year = {2022},
+  series = {{Nouvelle biblioth\`eque math\'ematique}},
+  number = {15},
+  pages = {108--115},
   publisher = {{Cassini}},
   address = {{Paris}},
   copyright = {All rights reserved},
@@ -1267,7 +1274,7 @@
   copyright = {All rights reserved},
   langid = {english},
   scholar = {7700562534442313606},
-  keywords = {article,short},
+  keywords = {article},
   file = {/home/zach/Documents/bib/Zach - 2016 - Natural deduction for the Sheffer stroke and Peirc.pdf}
 }
 
@@ -1465,6 +1472,8 @@
   journal = {The Review of Symbolic Logic},
   volume = {14},
   number = {3},
+  eprint = {ZACCEA},
+  eprinttype = {philpapers},
   pages = {645--686},
   doi = {10.1017/S1755020320000015},
   abstract = {Any set of truth-functional connectives has sequent calculus rules that can be generated systematically from the truth tables of the connectives. Such a sequent calculus gives rise to a multi-conclusion natural deduction system and to a version of Parigot's free deduction. The elimination rules are ``general,'' but can be systematically simplified. Cut-elimination and normalization hold. Restriction to a single formula in the succedent yields intuitionistic versions of these systems. The rules also yield generalized lambda calculi providing proof terms for natural deduction proofs as in the Curry\textendash Howard isomorphism. Addition of an indirect proof rule yields classical single-conclusion versions of these systems. Gentzen's standard systems arise as special cases.},
