--- a/zach.bib
+++ b/zach.bib
@@ -443,7 +443,7 @@
   address = {{Berlin}},
   doi = {10.1007/3-540-44622-2_12},
   copyright = {All rights reserved},
-  scholar = {15565136993603416204,12081769607991720084},
+  scholar = {15565136993603416204},
   keywords = {chapter},
   file = {/home/zach/Documents/bib/Baaz and Zach - 2000 - Hypersequents and the proof theory of intuitionist.pdf}
 }
@@ -753,7 +753,7 @@
   publisher = {{Oxford University Press}},
   address = {{New York and Oxford}},
   doi = {10.1093/acprof:oso/9780195137316.003.0029},
-  scholar = {1143733837172903405,3867834122282040128},
+  scholar = {1143733837172903405},
   keywords = {chapter},
   annotation = {Reprinted in Paolo Mancosu, \emph{The Adventure of Reason. Interplay Between Philosophy of Mathematics and Mathematical Logic, 1900--1940}. Oxford: Oxford University Press, 2010},
   file = {/home/zach/Documents/bib/Mancosu et al. - 2009 - The development of mathematical logic from Russell.pdf}
@@ -1481,6 +1481,25 @@
   scholar = {5236863028581452841},
   keywords = {03F03,03F05,03F07,article,Curry-Howard isomorphism,cut-elimination,natural deduction,normalization,proof terms,sequent calculus,short},
   file = {/home/zach/Documents/bib/Zach - 2021 - Cut elimination and normalization for generalized single and multi-conclusion.pdf}
+}
+
+@article{Zach2022,
+  title = {An Epimorphism between {{Fine}} and {{Ferguson}}'s Matrices for {{Angell}}'s {{AC}}},
+  author = {Zach, Richard},
+  year = {2022},
+  month = jul,
+  journal = {Logic and Logical Philosophy},
+  eprint = {ZACAHB},
+  eprinttype = {philpapers},
+  pages = {1--19},
+  issn = {2300-9802},
+  doi = {10.12775/LLP.2022.025},
+  abstract = {Angell's logic of analytic containment AC has been shown to be characterized by a 9-valued matrix NC by Ferguson, and by a 16-valued matrix by Fine. It is shown that the former is the image of a surjective homomorphism from the latter, i.e., an epimorphic image. Some candidate 7-valued matrices are ruled out as characteristic of AC. Whether matrices with fewer than 9 values exist remains an open question. The results were obtained with the help of the MUltlog system for investigating finite-valued logics; the results serve as an example of the usefulness of techniques from computational algebra in logic. A tableau proof system for NC is also provided. .},
+  copyright = {Copyright (c) 2022 Richard Zach},
+  langid = {english},
+  keywords = {article,short},
+  note = {Forthcoming},
+  file = {/home/zach/Documents/bib/Zach - 2022 - An Epimorphism between Fine and Ferguson’s Matrices for Angell’s AC.pdf}
 }
 
 @techreport{ZachWidmerTrappl1990,
