--- a/template-cv-zach.tex
+++ b/template-cv-zach.tex
@@ -31,6 +31,8 @@ $endfor$
 \email{$email$}
 \tel{$tel$}
 \twitter{$twitter$}
+\mastodonhandle{$mastodonhandle$}
+\mastodoninstance{$mastodoninstance$}
 \orcid{$orcid$}
 \philpapers{$philpapers$}
 \github{$github$}
@@ -100,8 +102,7 @@ $endfor$
 \end{publications}
 
 
-\section{Presentations}
-
+\section{Presentations}\nopagebreak
 \subsection{Invited Departmental Presentations}
 
 $for(presentation)$
