--- a/zach.bib
+++ b/zach.bib
@@ -579,7 +579,7 @@
   langid = {english},
   keywords = {edition,Philosophy / History \& Surveys / Modern,Philosophy / Movements / Analytic},
   note = {With editorial assistance by Steve Awodey, Dirk Schlimm, and Richard Zach},
-  file = {/home/zach/Documents/bib/Carus et al - 2019 - Early Writings.pdf;/home/zach/Documents/bib/Carus et al - 2019 - Early Writings2.pdf}
+  file = {/home/zach/Documents/bib/Carus et al - 2019 - Early writings.pdf}
 }
 
 @incollection{CarnapHahnNeurath2012,
@@ -705,13 +705,17 @@
 }
 
 @book{MancosuGalvanZach2022,
+  ids = {MancosuGalvanZach2022a},
   title = {{Introduction \`a la th\'eorie de la d\'emonstration: \'Elimination des coupures, normalisation et preuves de coh\'erence}},
   author = {Mancosu, Paolo and Galvan, Sergio and Zach, Richard},
   year = {2022},
   publisher = {{Vrin}},
   address = {{Paris}},
+  copyright = {All rights reserved},
   isbn = {978-2-7116-3091-2},
-  langid = {french}
+  langid = {french},
+  keywords = {textbook},
+  file = {/home/zach/tex/tdlivre/Mancosu et al. - 2022 - Introduction à la théorie de la démonstration Éli.pdf}
 }
 
 @article{MancosuZach2015,
@@ -756,9 +760,14 @@
   booktitle = {Festschrift for {{Volker Peckhaus}}},
   author = {Mancosu, Paolo and Zach, Richard},
   year = {2023},
+  eprint = {2301.09814},
+  eprinttype = {arxiv},
   pages = {1--42},
   publisher = {{College Publications}},
-  address = {{London}}
+  address = {{London}},
+  langid = {english},
+  keywords = {chapter,short},
+  note = {Forthcoming}
 }
 
 @incollection{MancosuZachBadesa2009,
@@ -1295,7 +1304,7 @@
   langid = {english},
   scholar = {7700562534442313606},
   keywords = {article},
-  file = {/home/zach/Documents/bib/Zach - 2016 - Natural deduction for the Sheffer stroke and Peirc.pdf}
+  file = {/home/zach/Documents/bib/Zach - 2016 - Natural deduction for the Sheffer stroke and Peirce’s arrow (and any other.pdf}
 }
 
 @article{Zach2016a,
