--- a/zach.bib
+++ b/zach.bib
@@ -403,6 +403,7 @@
   pages = {297--307},
   issn = {0933-5846, 1432-0665},
   doi = {10.1007/s001530050100},
+  urldate = {2018-05-02},
   abstract = {The generalization properties of algebraically closed fields ACF p of characteristic p {$>$} 0 and ACF 0 of characteristic 0 are investigated in the sequent calculus with blocks of quantifiers. It is shown that ACF p admits finite term bases, and ACF 0 admits term bases with primality constraints. From these results the analogs of Kreisel's Conjecture for these theories follow: If for some k , A(1 + {$\cdot$} {$\cdot$} {$\cdot$} + 1) (n 1's) is provable in k steps, then ({$\forall$}x )A(x ) is provable.},
   copyright = {All rights reserved},
   langid = {english},
@@ -608,10 +609,10 @@
   keywords = {translation}
 }
 
-@article{ElkindZach2022,
+@article{ElkindZach2023,
   title = {The Genealogy of `{$\vee$}'},
   author = {Elkind, Landon D. C. and Zach, Richard},
-  year = {2022},
+  year = {2023},
   journal = {The Review of Symbolic Logic},
   eprint = {ZACTGO-2},
   eprinttype = {philpapers},
@@ -621,7 +622,7 @@
   scholar = {6390139438045593841},
   keywords = {article,short},
   note = {forthcoming},
-  file = {/home/zach/Documents/bib/Elkind and Zach - 2022 - The genealogy of ‘∨’.pdf}
+  file = {/home/zach/Documents/bib/Elkind and Zach - 2022 - The genealogy of ‘∨’.pdf;/home/zach/Documents/bib/Elkind and Zach - 2022 - The genealogy of ‘∨’2.pdf}
 }
 
 @misc{EtchemendyBarker-PlummerZach2013,
@@ -846,6 +847,7 @@
   pages = {33--65},
   issn = {0039-7857, 1573-0964},
   doi = {10.1007/s11229-015-0877-z},
+  urldate = {2018-05-02},
   abstract = {In Untersuchungen zur allgemeinen Axiomatik (1928) and Abriss der Logistik (1929), Carnap attempted to formulate the metatheory of axiomatic theories within a single, fully interpreted type-theoretic framework and to investigate a number of meta-logical notions in it, such as those of model, consequence, consistency, completeness, and decidability. These attempts were largely unsuccessful, also in his own considered judgment. A detailed assessment of Carnap's attempt shows, nevertheless, that his approach is much less confused and hopeless than it has often been made out to be. By providing such a reassessment, the paper contributes to a reevaluation of Carnap's contributions to the development of modern logic.},
   copyright = {All rights reserved},
   langid = {english},
@@ -868,6 +870,7 @@
   pages = {540--573},
   issn = {02681064},
   doi = {10.1111/j.1468-0017.2011.01430.x},
+  urldate = {2018-05-02},
   abstract = {Although arguments for and against competing theories of vagueness often appeal to claims about the use of vague predicates by ordinary speakers, such claims are rarely tested. An exception is Bonini et al. (1999), who report empirical results on the use of vague predicates by Italian speakers, and take the results to count in favor of epistemicism. Yet several methodological difficulties mar their experiments; we outline these problems and devise revised experiments that do not show the same results. We then describe three additional empirical studies that investigate further claims in the literature on vagueness: the hypothesis that speakers confuse `P' with `definitely P', the relative persuasiveness of different formulations of the inductive premise of the Sorites, and the interaction of vague predicates with three different forms of negation.},
   copyright = {All rights reserved},
   langid = {english},
@@ -1046,6 +1049,7 @@
   pages = {211--259},
   issn = {0039-7857},
   doi = {10.1023/A:1026247421383},
+  urldate = {2018-05-02},
   abstract = {After a brief flirtation with logicism around 1917, David Hilbert proposed his own program in the foundations of mathematics in 1920 and developed it, in concert with collaborators such as Paul Bernays and Wilhelm Ackermann, throughout the 1920s. The two technical pillars of the project were the development of axiomatic systems for ever stronger and more comprehensive areas of mathematics, and finitistic proofs of consistency of these systems. Early advances in these areas were made by Hilbert (and Bernays) in a series of lecture courses at the University of G\"ottingen between 1917 and 1923, and notably in Ackermann's dissertation of 1924. The main innovation was the invention of the {$\epsilon$}-calculus, on which Hilbert's axiom systems were based, and the development of the {$\epsilon$}-substitution method as a basis for consistency proofs. The paper traces the development of the ``simultaneous development of logic and mathematics'' through the {$\epsilon$}-notation and provides an analysis of Ackermann's consistency proofs for primitive recursive arithmetic and for the first comprehensive mathematical system, the latter using the substitution method. It is striking that these proofs use transfinite induction not dissimilar to that used in Gentzen's later consistency proof as well as non-primitive recursive definitions, and that these methods were accepted as finitistic at the time.},
   copyright = {All rights reserved},
   langid = {english},
@@ -1077,6 +1081,8 @@
   journal = {Bulletin of Symbolic Logic},
   volume = {9},
   number = {4},
+  eprint = {3133728},
+  eprinttype = {jstor},
   pages = {520--521},
   doi = {10.1017/S1079898600004340},
   url = {https://www.jstor.org/stable/3133728},
@@ -1113,6 +1119,7 @@
   pages = {79--94},
   issn = {0144-5340, 1464-5149},
   doi = {10.1080/01445340310001606930},
+  urldate = {2018-05-02},
   copyright = {All rights reserved},
   langid = {english},
   scholar = {7640018938190008334,12528057930483119998},
@@ -1133,6 +1140,7 @@
   pages = {155--164},
   issn = {0022-3611, 1573-0433},
   doi = {10.1023/B:LOGI.0000021744.10237.d0},
+  urldate = {2018-05-02},
   abstract = {Quantified propositional intuitionistic logic is obtained from propositional intuitionistic logic by adding quantifiers {$\forall$}p, {$\exists$}p, where the propositional variables range over upward-closed subsets of the set of worlds in a Kripke structure. If the permitted accessibility relations are arbitrary partial orders, the resulting logic is known to be recursively isomorphic to full second-order logic (Kremer, 1997). It is shown that if the Kripke structures are restricted to trees of at height and width at most {$\omega$}, the resulting logics are decidable. This provides a partial answer to a question by Kremer. The result also transfers to modal S4 and some G\"odel\textendash Dummett logics with quantifiers over propositions.},
   copyright = {All rights reserved},
   langid = {english},
@@ -1180,7 +1188,6 @@
   eprint = {ZACTFG},
   eprinttype = {philpapers},
   pages = {369--371},
-  issn = {0144-5340, 1464-5149},
   doi = {10.1080/01445340500259388},
   copyright = {All rights reserved},
   langid = {english},
@@ -1220,6 +1227,7 @@
   publisher = {{Springer}},
   address = {{Berlin}},
   doi = {10.1007/11780342_59},
+  urldate = {2018-05-02},
   abstract = {Although Kurt Go\textasciidieresis del does not figure prominently in the history of computabilty theory, he exerted a significant influence on some of the founders of the field, both through his published work and through personal interaction. In particular, Go\textasciidieresis del's 1931 paper on incompleteness and the methods developed therein were important for the early development of recursive function theory and the lambda calculus at the hands of Church, Kleene, and Rosser. Church and his students studied G\textasciidieresis odel 1931, and Go\textasciidieresis del taught a seminar at Princeton in 1934. Seen in the historical context, G\textasciidieresis odel was an important catalyst for the emergence of computability theory in the mid 1930s.},
   copyright = {All rights reserved},
   langid = {english},
@@ -1299,6 +1307,7 @@
   pages = {183--197},
   issn = {0022-3611, 1573-0433},
   doi = {10.1007/s10992-015-9370-x},
+  urldate = {2018-05-02},
   abstract = {Methods available for the axiomatization of arbitrary finite-valued logics can be applied to obtain sound and complete intelim rules for all truth-functional connectives of classical logic including the Sheffer stroke (NAND) and Peirce's arrow (NOR). The restriction to a single conclusion in standard systems of natural deduction requires the introduction of additional rules to make the resulting systems complete; these rules are nevertheless still simple and correspond straightforwardly to the classical absurdity rule. Omitting these rules results in systems for intuitionistic versions of the connectives in question.},
   copyright = {All rights reserved},
   langid = {english},
@@ -1538,11 +1547,10 @@
   file = {/home/zach/Documents/bib/Zach - 2021 - Learnign outcomes and grade specifications in a formal logic course.pdf}
 }
 
-@article{Zach2022,
+@article{Zach2023,
   title = {An Epimorphism between {{Fine}} and {{Ferguson}}'s Matrices for {{Angell}}'s {{AC}}},
   author = {Zach, Richard},
-  year = {2022},
-  month = jul,
+  year = {2023},
   journal = {Logic and Logical Philosophy},
   eprint = {ZACAHB},
   eprinttype = {philpapers},
