--- a/rz-vita.sty
+++ b/rz-vita.sty
@@ -136,8 +136,8 @@
     {\scriptsize  \texttt{\href{mailto:\@email}{\@email}} \, \faEnvelope} \\
     {\scriptsize  \texttt{\href{http://\@www}{\@www}} \, \faGlobe} \\
     {\scriptsize  \texttt{\href{https://github.com/\@github}{\@github}} \, \faGithub} \\
-    {\scriptsize
-    \texttt{\href{https://twitter.com/\@twitter}{\@twitter}\, \faTwitter}} \\
+    % {\scriptsize
+    % \texttt{\href{https://twitter.com/\@twitter}{\@twitter}\, \faTwitter}} \\
     {\scriptsize
     \texttt{\href{https://\@mastodoninstance/@\@mastodonhandle}{@\@mastodonhandle
     @\@mastodoninstance}\, \faMastodon}} \\
