--- a/zach.bib
+++ b/zach.bib
@@ -122,7 +122,6 @@
   institution = {{Technische Universit\"at Wien, Institut f\"ur Computersprachen E185.2}},
   location = {{Vienna}},
   doi = {10.11575/PRISM/39963},
-  scholar = {8943239453694643393},
   keywords = {techreport},
   file = {/home/zach/Documents/bib/Baaz et al. - 1993 - Systematic construction of natural deduction syste3.pdf}
 }
@@ -138,7 +137,7 @@
   publisher = {{IEEE Press}},
   location = {{Los Alamitos}},
   doi = {10.1109/ISMVL.1993.289558},
-  scholar = {8129704214380989574},
+  scholar = {8129704214380989574,8943239453694643393},
   keywords = {chapter},
   file = {/home/zach/Documents/bib/Baaz et al. - 1993 - Systematic construction of natural deduction syste.pdf;/home/zach/Documents/bib/Baaz et al. - 1993 - Systematic construction of natural deduction syste2.pdf}
 }
@@ -412,7 +411,7 @@
   publisher = {{Springer}},
   location = {{Berlin}},
   doi = {10.1007/3-540-44622-2_12},
-  scholar = {15565136993603416204},
+  scholar = {15565136993603416204,12081769607991720084},
   keywords = {chapter},
   file = {/home/zach/Documents/bib/Baaz and Zach - 2000 - Hypersequents and the proof theory of intuitionist.pdf}
 }
@@ -502,7 +501,7 @@
   eprinttype = {philpapers},
   pages = {910--929},
   doi = {10.1017/S1755020320000180},
-  scholar = {10509336364159558815},
+  scholar = {13446928064826410332,1571027620853824592},
   keywords = {article,short},
   file = {/home/zach/Documents/bib/Burns and Zach - 2021 - Cut-free completeness for modular hypersequent calculi for modal logics K, T,.pdf}
 }
@@ -556,6 +555,7 @@
   pages = {75--116},
   publisher = {{Springer}},
   location = {{Vienna and New York}},
+  scholar = {1018406602556126081},
   keywords = {translation}
 }
 
@@ -570,6 +570,24 @@
   keywords = {translation}
 }
 
+@article{ElkindZach2021,
+  title = {The Genealogy of {$\vee$}},
+  author = {Elkind, Landon D. C. and Zach, Richard},
+  date = {2021},
+  journaltitle = {The Bulletin of Symbolic Logic},
+  volume = {27},
+  number = {3},
+  eprint = {ZACTGO-2},
+  eprinttype = {philpapers},
+  pages = {327--328},
+  doi = {10.1017/bsl.2021.50},
+  langid = {english},
+  scholar = {6390139438045593841,13231283573301597206},
+  keywords = {abstract},
+  note = {forthcoming},
+  file = {/home/zach/Documents/bib/Elkind and Zach - 2021 - The genealogy of ∨.pdf}
+}
+
 @article{ElkindZach2023,
   title = {The Genealogy of `{$\vee$}'},
   author = {Elkind, Landon D. C. and Zach, Richard},
@@ -580,7 +598,7 @@
   pages = {1--38},
   doi = {10.1017/S1755020321000587},
   langid = {english},
-  scholar = {6390139438045593841},
+  scholar = {6390139438045593841,13231283573301597206},
   keywords = {article,short},
   note = {forthcoming},
   file = {/home/zach/Documents/bib/Elkind and Zach - 2022 - The genealogy of ‘∨’.pdf;/home/zach/Documents/bib/Elkind and Zach - 2022 - The genealogy of ‘∨’2.pdf}
@@ -621,6 +639,7 @@
   volume = {4},
   pages = {215--220},
   doi = {10.1080/11663081.1994.10510833},
+  scholar = {3856327987026643479,16319455258715871656,6262318244479206881},
   keywords = {review}
 }
 
@@ -646,7 +665,35 @@
   location = {{Calgary}},
   url = {https://forallx.openlogicproject.org/},
   scholar = {11671088066955707283},
-  keywords = {textbook}
+  keywords = {textbook},
+  file = {/home/zach/Documents/bib/Magnus et al - 2021 - forall ix-i - Calgary. An introduction to formal logic.pdf}
+}
+
+@book{MagnusButtonLoftisThomas-BolducEtAl2021,
+  title = {Forall {\emph{x}}: {{Dortmund}}. {{Eine Einf\"uhrung}} in Die Formale {{Logik}}},
+  author = {Magnus, P. D. and Button, Tim and Loftis, J. Robert and Thomas-Bolduc, Aaron and Trueman, Robert and Zach, Richard},
+  translator = {{Wimmer, Simon}},
+  date = {2021},
+  publisher = {{Open Logic Project}},
+  location = {{Dortmund}},
+  url = {https://tu-dortmund.sciebo.de/s/PAZYaqD7Nekt8LC},
+  scholar = {11671088066955707283},
+  keywords = {textbook},
+  file = {/home/zach/Documents/bib/Magnus et al - 2021 - forall ix-i - Dortmund. Eine Einführung in die formale Logik.pdf}
+}
+
+@book{MagnusButtonLoftisThomas-BolducEtAl2021a,
+  title = {Para Tod\emph{x}s Natal. Uma introdu\c{c}\~ao \`a l\'ogica formal},
+  author = {Magnus, P. D. and Button, Tim and Loftis, J. Robert and Thomas-Bolduc, Aaron and Trueman, Robert and Zach, Richard},
+  translator = {{Daniel Durante} and {Maria da Paz Nunes de Medeiros} and {Ricardo Gentil de Ara\'ujo Pereira}},
+  date = {2021},
+  publisher = {{Universidade Federal do Rio Grande do Norte}},
+  location = {{Natal}},
+  url = {https://github.com/Grupo-de-Estudos-em-Logica-da-UFRN/Para-Todxs-Natal},
+  langid = {portuguese},
+  scholar = {11671088066955707283},
+  keywords = {textbook},
+  file = {/home/zach/Documents/bib/Magnus et al - 2021 - Para Todix-is Natal. Uma introdução à lógica formal.pdf}
 }
 
 @book{MancosuGalvanZach2021,
@@ -721,7 +768,8 @@
   location = {{London}},
   langid = {english},
   keywords = {chapter,short},
-  note = {Forthcoming}
+  note = {Forthcoming},
+  file = {/home/zach/Documents/bib/Mancosu and Zach - 2023 - Some unpublished letters by Gödel and von Neumann in the Fraenkel archive.pdf}
 }
 
 @incollection{MancosuZachBadesa2009,
@@ -736,7 +784,7 @@
   publisher = {{Oxford University Press}},
   location = {{New York and Oxford}},
   doi = {10.1093/acprof:oso/9780195137316.003.0029},
-  scholar = {1143733837172903405},
+  scholar = {1143733837172903405,3867834122282040128},
   keywords = {chapter},
   annotation = {Reprinted in Paolo Mancosu, \emph{The Adventure of Reason. Interplay Between Philosophy of Mathematics and Mathematical Logic, 1900--1940}. Oxford: Oxford University Press, 2010},
   file = {/home/zach/Documents/bib/Mancosu et al. - 2009 - The development of mathematical logic from Russell.pdf}
@@ -780,6 +828,16 @@
   volume = {12},
   pages = {341--342},
   keywords = {abstract}
+}
+
+@software{SalzerKatzenbeisserStefanKralAndreasLeitgebEtAl2022,
+  title = {{{MUltlog}}},
+  author = {Salzer, Gernot and Katzenbeisser, Stefan and {Stefan Kral} and {Andreas Leitgeb} and {Richard Zach}},
+  date = {2022-07-24},
+  doi = {10.5281/zenodo.6893267},
+  url = {https://github.com/rzach/multlog},
+  version = {1.16a},
+  file = {/home/zach/Documents/bib/Salzer et al - 2022 - MUltlog.pdf}
 }
 
 @article{SchiemerZachReck2017,
@@ -1121,7 +1179,7 @@
   publisher = {{Elsevier}},
   location = {{Amsterdam}},
   doi = {10.1016/B978-044450871-3/50152-2},
-  scholar = {6952797317484429887,13406715195474698121},
+  scholar = {12341986574782529565,6952797317484429887},
   keywords = {chapter}
 }
 
@@ -1377,11 +1435,11 @@
 @book{Zach2019h,
   title = {Sets, Logic, Computation: An Open Introduction to Metalogic},
   author = {Zach, Richard},
-  date = {2019},
+  date = {2021},
   publisher = {{Open Logic Project}},
   location = {{Calgary}},
   url = {https://slc.openlogicproject.org/},
-  scholar = {3464213577176529916,17795367285294589104},
+  scholar = {3464213577176529916,1022000481657628289,17795367285294589104},
   keywords = {textbook},
   annotation = {Open textbook based on the Open Logic Project}
 }
@@ -1396,7 +1454,20 @@
   location = {{Oxford}},
   bookauthor = {Misak, Cheryl},
   langid = {english},
-  keywords = {other}
+  keywords = {other},
+  file = {/home/zach/Documents/bib/Zach - 2020 - Frege's and Russell's crisis.pdf}
+}
+
+@book{Zach2020a,
+  title = {What If?: An Open Introduction to Non-Classical Logics},
+  author = {Zach, Richard},
+  date = {2020},
+  publisher = {{Open Logic Project}},
+  location = {{Calgary}},
+  url = {http://builds.openlogicproject.org/courses/what-if/},
+  keywords = {textbook},
+  annotation = {Open textbook based on the Open Logic Project},
+  file = {/home/zach/Documents/bib/Zach - 2020 - What if - - an open introduction to non-classical logics.pdf}
 }
 
 @article{Zach2021,
@@ -1456,7 +1527,8 @@
   publisher = {{College Publications}},
   location = {{London}},
   langid = {english},
-  keywords = {other}
+  keywords = {other},
+  file = {/home/zach/Zotero/storage/BL7XYZ7B/Zach - 2022 - Hilbert's axiomatic calculus (1917).pdf}
 }
 
 @incollection{Zach2022b,
@@ -1499,6 +1571,7 @@
   location = {{Vienna}},
   doi = {10.11575/PRISM/39857},
   langid = {english},
+  scholar = {5660040708150167503},
   keywords = {techreport},
   file = {/home/zach/Documents/bib/Zach et al - 1990 - Art-ificial intelligence - a short bibliography on AI and the arts.pdf}
 }
