--- a/template-cv-zach.tex
+++ b/template-cv-zach.tex
@@ -6,12 +6,13 @@
 \usepackage[utf8]{inputenc}
 
 \usepackage{rz-vita}
+\usepackage{ifthen}
 %\usepackage[english]{isodate}
 %\printdayoff\numdate
 \def\printdate#1{\xprintdate#1-}
 \def\xprintdate#1-#2-#3-{#1}
-\def\daterange#1#2{\xprintdate#1---\xprintdate#2-}
-
+%\def\daterange#1#2{\xprintdate#1---\xprintdate#2-}
+\def\daterange#1#2{\ifthenelse{\equal{\xprintdate#1-}{\xprintdate#2-}}{\xprintdate#1-}{\xprintdate#1---\xprintdate#2-}}
 
 % Your biblatex file is likely somewhere else.
 $if(bibliography)$
